pending task component button changes

--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -9,9 +9,9 @@
         >
           <h3>
             {{ i + 1 }}. {{ task }}
-            <button mat-button class="mark-button">
+            <!-- <button mat-button class="mark-button">
               <mat-icon>star_border</mat-icon>
-            </button>
+            </button> -->
             <button mat-button class="done-button" (click)="deleteTask(i)">
               <mat-icon>delete</mat-icon>
             </button>
